--- a/pom.xml
+++ b/pom.xml
@@ -36,29 +36,9 @@
             <version>7.7.1</version>
         </dependency>
         <dependency>
-            <groupId>org.clulab</groupId>
-            <artifactId>processors-corenlp_2.11</artifactId>
-            <version>7.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.clulab</groupId>
-            <artifactId>processors-main_2.11</artifactId>
-            <version>7.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.clulab</groupId>
-            <artifactId>processors-odin_2.11</artifactId>
-            <version>7.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.clulab</groupId>
-            <artifactId>processors-modelsmain_2.11</artifactId>
-            <version>7.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.clulab</groupId>
-            <artifactId>processors-modelscorenlp_2.11</artifactId>
-            <version>7.4.2</version>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>1.9.1</version>
         </dependency>
     </dependencies>
 
